# csv-converter-skart

./: .dockerignore  .gitignore  LICENSE  README.en.md  README.md  README.pt.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
csv_converter/: __init__.py
csv_converter/cli/: main.py
csv_converter/core/: __init__.py  converter.py  csv_converter.py  datafile_converter.py
csv_converter/core/filer/: __init__.py  main_filer.py  temporary_filer.py
csv_converter/functions/: __init__.py  decorator.py
csv_converter/functions/detector/: __init__.py  detect_encoding.py  verify_confidence.py
csv_converter/functions/sanitizer/: __init__.py  sanitize_spreadsheets.py  sanitize_xml.py
csv_converter/functions/zipper/: __init__.py  unzip_xlsx.py  zip_xlsx.py  zippers_decorator.py
csv_converter/tests/: conftest.py  test_01_class_MainFiler.py  test_02_functions_zipper.py  test_03_class_DatafileConverter.py  test_04_function_csv_converter.py
csv_converter/tests/fixtures/expected_files/: normalized.csv
csv_converter/tests/fixtures/input_files/: original.csv  original.xlsx
