# ./pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
name = "csv-converter-skart"
version = "0.1.2"
description = "CLI para conversão e sanitização de arquivos de tabelas de dados."
authors = [
    {name = "Artur dos Santos Shon"}
]
dependencies = [
    "pandas~=3.0",
    "openpyxl~=3.1",
    "click~=8.3"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
csv-converter = "csv_converter.cli.main:main"