# ./pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
name = "csv-converter-skart"
version = "0.2.2"
description = "CLI for converting and sanitizing data table files."
authors = [
    {name = "Artur dos Santos Shon"}
]
dependencies = [
    "pandas~=3.0",
    "openpyxl~=3.1",
    "click~=8.3",
    "chardet~=7.4"
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
csv-converter = "csv_converter.cli.main:main"